Data Structure Latest

--- a/Data Structures.ipynb
+++ b/Data Structures.ipynb
@@ -2187,8 +2187,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "id": "3ce532fe-67d5-4cf3-a20d-77477df48e69",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[2, 3, 4], [3, 4, 5], [4, 5, 6]]"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l=[2,3,4]\n",
+    "[[i+n for i in l] for n in range(0,3)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "4844a513-9033-4a11-a938-670d2cd1ee78",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 1), (2, 1), (3, 1), (1, 2), (2, 2), (3, 2), (1, 3), (2, 3), (3, 3)]"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l=[1,2,3]\n",
+    "[(n,i) for i in l for n in l]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75d1e02b-63b7-41e8-a546-703afcd8b81d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "List Data Upto here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5355b206-f622-4b3d-9135-315f1bdce2bd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2196,7 +2250,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4844a513-9033-4a11-a938-670d2cd1ee78",
+   "id": "496d5068-df72-433c-85c1-75e5d26106e3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e20d376c-49f2-4859-a537-b1732706ab2b",
    "metadata": {},
    "outputs": [],
    "source": []
